飲酒量の実装

--- a/src/assets/styles/post-list.scss
+++ b/src/assets/styles/post-list.scss
@@ -71,6 +71,13 @@
         }
       }
     }
+
+    &-alcohol-intake {
+      margin-top: $spacing-lg;
+      font-size: $font-size-sm;
+      color: $text-primary;
+      font-weight: 500;
+    }
   }
 }
 
